[tool.poetry]
name = "repl-nix-fzgdhj"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_fzgdhj"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
colorama = "^0.4.6"
fake-useragent = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
